--- a/views/layout.html
+++ b/views/layout.html
@@ -7,6 +7,10 @@
 
     <link href="/stylesheets/bootstrap.min.css" rel="stylesheet">
     <link href="/stylesheets/style.css" rel="stylesheet">
+
+    {% block style %}
+
+    {% endblock %}
 </head>
 
 <body>
