--- a/views/postgres.html
+++ b/views/postgres.html
@@ -3,19 +3,21 @@
 {% block content %}
     <h3>Basic config</h3>
 
+    {{ msg | safe }}
+
     <form action="" method="post">
         <div style="border: 1px solid #ddd; padding: 10px;">
             <h4>Host-based authentication (pg_hba.conf)</h4>
 
             <div class="form-group">
                 <label>
-                    <input type="checkbox" name="address" value="all"/> Allow any user connect to Postgres if the user's
+                    <input type="checkbox" name="address1" value="all"/> Allow any user connect to Postgres if the user's
                     password is correctly supplied
                 </label>
             </div>
 
             <div class="form-group">
-                <label class="control-label" for="address">Or type Addresses to specify users from addresses connect to
+                <label class="control-label" for="address2">Or type Addresses to specify users from addresses connect to
                     Postgres</label>
                 <input type="text" name="address" id="address" class="form-control"
                        placeholder="Example: 192.168.1.1/32" style="width: 50%;"/>
