--- a/views/login.html
+++ b/views/login.html
@@ -1,7 +1,16 @@
-{% extends 'layout.html' %}
+<!DOCTYPE html>
+<html>
+<head lang="en">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ArrowJS Installer</title>
 
-{% block content %}
-    <p>&nbsp;</p>
+    <link href="/stylesheets/bootstrap.min.css" rel="stylesheet">
+    <link href="/stylesheets/style.css" rel="stylesheet">
+</head>
+
+<body>
+    <div style="margin-top: 15%;"></div>
 
     <h1 class="text-center">
         Welcome to ArrowJS Installer
@@ -10,7 +19,7 @@
     <p>&nbsp;</p>
 
     <div class="text-center">
-        <p class="login-box-msg">Enter your init password to start your session</p>
+        <h3 class="login-box-msg">Enter your init password to start your session</h3>
 
         {{ msg | safe }}
 
@@ -30,4 +39,5 @@
             </div>
         </form>
     </div>
-{% endblock %}
+</body>
+</html>
