--- a/views/layout.html
+++ b/views/layout.html
@@ -33,7 +33,7 @@
                     <ul class="nav navbar-nav">
                         <li class="active"><a href="/">Manage Packages</a></li>
                         <li><a href="/websites">Manage Websites</a></li>
-                        <li><a href="#">Manage Services</a></li>
+                        <li><a href="/services">Manage Services</a></li>
                     </ul>
                 </div>
             </div>
