--- a/views/index.html
+++ b/views/index.html
@@ -20,7 +20,7 @@
 
     <hr/>
 
-    <h3>PostgreSQL</h3>
+    <h3>PostgreSQL (Mandatory)</h3>
 
     <div class="row">
         <div class="col-sm-6">
@@ -37,7 +37,7 @@
 
         <div class="col-sm-12">
             {% if postgres.need_install %}
-                <div id="postgres-status" style="margin-bottom: 15px; font-size: 24px;"></div>
+                <div id="postgres-status" style="margin-bottom: 15px; font-size: 20px;"></div>
 
                 <pre id="postgres-process"
                      style="display: none; height: 300px; overflow: scroll; padding: 15px; background-color: #000000; color: #5cb85c;"></pre>
@@ -47,7 +47,7 @@
 
     <hr/>
 
-    <h3>Redis</h3>
+    <h3>Redis (Mandatory)</h3>
     <div class="row">
         <div class="col-sm-6">
             <pre>{{ redis.info }}</pre>
@@ -63,7 +63,7 @@
 
         <div class="col-sm-12">
             {% if redis.need_install %}
-                <div id="redis-status" style="margin-bottom: 15px; font-size: 24px;"></div>
+                <div id="redis-status" style="margin-bottom: 15px; font-size: 20px;"></div>
 
                 <pre id="redis-process"
                      style="display: none; height: 300px; overflow: scroll; padding: 15px; background-color: #000000; color: #5cb85c;"></pre>
@@ -73,7 +73,7 @@
 
     <hr/>
 
-    <h3>Nginx</h3>
+    <h3>Nginx (Optional)</h3>
     <div class="row">
         <div class="col-sm-6">
             <pre>{{ nginx.info }}</pre>
@@ -88,7 +88,7 @@
 
         <div class="col-sm-12">
             {% if nginx.need_install %}
-                <div id="nginx-status" style="margin-bottom: 15px; font-size: 24px;"></div>
+                <div id="nginx-status" style="margin-bottom: 15px; font-size: 20px;"></div>
                 <pre id="nginx-process"
                      style="display: none; height: 300px; overflow: scroll; padding: 15px; background-color: #000000; color: #5cb85c;"></pre>
             {% endif %}
@@ -97,7 +97,7 @@
 
     <hr/>
 
-    <h3>PM2</h3>
+    <h3>PM2 (Optional)</h3>
 
     <div class="row">
         <div class="col-sm-6">
@@ -113,7 +113,7 @@
 
         <div class="col-sm-12">
             {% if pm2.need_install %}
-                <div id="pm2-status" style="margin-bottom: 15px; font-size: 24px;"></div>
+                <div id="pm2-status" style="margin-bottom: 15px; font-size: 20px;"></div>
 
                 <pre id="pm2-process"
                      style="display: none; height: 300px; overflow: scroll; padding: 15px; background-color: #000000; color: #5cb85c;"></pre>
@@ -210,22 +210,22 @@
         socket.on('checking', function (data) {
             if (data.postgres) {
                 $('.btn-install-postgres').remove();
-                postgres_status.text("Postgres are installing ...").css('color', 'blue');
+                postgres_status.text("Postgres is installing ...").css('color', 'blue');
             }
 
             if (data.redis) {
                 $('.btn-install-redis').remove();
-                redis_status.text("Redis are installing ...").css('color', 'blue');
+                redis_status.text("Redis is installing ...").css('color', 'blue');
             }
 
             if (data.nginx) {
                 $('.btn-install-nginx').remove();
-                nginx_status.text("Nginx are installing ...").css('color', 'blue');
+                nginx_status.text("Postgres is installing ...").css('color', 'blue');
             }
 
             if (data.pm2) {
                 $('.btn-install-pm2').remove();
-                pm2_status.text("PM2 are installing ...").css('color', 'blue');
+                pm2_status.text("Postgres is installing ...").css('color', 'blue');
             }
         });
 
@@ -268,7 +268,7 @@
 
         function installPostgres(button) {
             $(button).remove();
-            postgres_status.text("Installing Postgres ...").css('color', 'blue');
+            postgres_status.text("Installing Postgres... Please do not use the browser refresh or navigate to other page while Installing!").css('color', 'blue');
             postgres_process.css('display', 'block');
 
             socket.emit('install_postgres', '');
@@ -276,7 +276,7 @@
 
         function installRedis(button) {
             $(button).remove();
-            redis_status.text("Installing Redis ...").css('color', 'blue');
+            redis_status.text("Installing Redis... Please do not use the browser refresh or navigate to other page while Installing!").css('color', 'blue');
             redis_process.css('display', 'block');
 
             socket.emit('install_redis', '');
@@ -284,7 +284,7 @@
 
         function installNginx(button) {
             $(button).remove();
-            nginx_status.text("Installing Nginx ...").css('color', 'blue');
+            nginx_status.text("Installing Nginx... Please do not use the browser refresh or navigate to other page while Installing!").css('color', 'blue');
             nginx_process.css('display', 'block');
 
             socket.emit('install_nginx', '');
@@ -292,7 +292,7 @@
 
         function installPm2(button) {
             $(button).remove();
-            pm2_status.text("Installing PM2 ...").css('color', 'blue');
+            pm2_status.text("Installing Pm2... Please do not use the browser refresh or navigate to other page while Installing!").css('color', 'blue');
             pm2_process.css('display', 'block');
 
             socket.emit('install_pm2', '');
