fix bug install script (when curl not yet installed)

--- a/views/index.html
+++ b/views/index.html
@@ -124,8 +124,7 @@
     <p>&nbsp;</p>
 
     <!-- Postgres config modal -->
-    <div class="modal fade" id="postgres-config-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
-         aria-hidden="true">
+    <div class="modal fade" id="postgres-config-modal" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
