--- a/views/services.html
+++ b/views/services.html
@@ -12,9 +12,9 @@
 
                 <p></p>
 
-                <a href="/postgres">
-                    <button type="button" class="btn btn-primary">Configure</button>
-                </a>
+                {#<a href="/postgres">#}
+                    {#<button type="button" class="btn btn-primary">Configure</button>#}
+                {#</a>#}
             </div>
 
             <div class="col-sm-6">
@@ -62,9 +62,9 @@
 
                 <p></p>
 
-                <a href="/nginx">
-                    <button type="button" class="btn btn-primary">Configure</button>
-                </a>
+                {#<a href="/nginx">#}
+                    {#<button type="button" class="btn btn-primary">Configure</button>#}
+                {#</a>#}
             </div>
 
             <div class="col-sm-6">
