--- a/views/websites.html
+++ b/views/websites.html
@@ -10,7 +10,50 @@
     <pre>Website 2</pre>
     <pre>Website 3</pre>
 
-    <button class="btn btn-primary" onclick="createWebsite()">Create New Website</button>
+    <button class="btn btn-primary" data-toggle="modal" data-target="#postgres-config-modal">Create New Website</button>
+
+    <!-- Create website modal -->
+    <div class="modal fade" id="create-website-modal" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                    <h4 class="modal-title">Create new website</h4>
+                </div>
+
+                <div class="modal-body">
+                    <form id="frm-config-postgres">
+                        <div class="form-group">
+                            <label>
+                                <input type="radio" name="address" value="all"/>
+                                Allow any user connect to Postgres
+                            </label>
+                        </div>
+
+                        <div class="form-group">
+                            <label>
+                                <input type="radio" name="address" value="custom"/>
+                                Allow users from the addresses below connect to Postgres
+                                <input type="text" name="address2" class="form-control"
+                                       placeholder="Example: 192.168.1.1/32" style="margin-top: 15px; width: 60%;"
+                                       disabled="disabled"/>
+                            </label>
+                        </div>
+                    </form>
+                </div>
+
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary" onclick="savePostgresConfiguration()">
+                        Save changes
+                    </button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- End Postgres config modal -->
 {% endblock %}
 
 {% block scripts %}
