--- a/views/websites.html
+++ b/views/websites.html
@@ -10,7 +10,7 @@
     <pre>Website 2</pre>
     <pre>Website 3</pre>
 
-    <button class="btn btn-primary" data-toggle="modal" data-target="#postgres-config-modal">Create New Website</button>
+    <button class="btn btn-primary" data-toggle="modal" data-target="#create-website-modal">Create New Website</button>
 
     <!-- Create website modal -->
     <div class="modal fade" id="create-website-modal" tabindex="-1" role="dialog" aria-hidden="true">
@@ -26,27 +26,25 @@
                 <div class="modal-body">
                     <form id="frm-config-postgres">
                         <div class="form-group">
-                            <label>
-                                <input type="radio" name="address" value="all"/>
-                                Allow any user connect to Postgres
-                            </label>
+                            <label>Root path</label>
+                            <input type="text" name="root_path" class="form-control" style="margin-top: 15px;"/>
                         </div>
 
                         <div class="form-group">
-                            <label>
-                                <input type="radio" name="address" value="custom"/>
-                                Allow users from the addresses below connect to Postgres
-                                <input type="text" name="address2" class="form-control"
-                                       placeholder="Example: 192.168.1.1/32" style="margin-top: 15px; width: 60%;"
-                                       disabled="disabled"/>
-                            </label>
+                            <label>Project name</label>
+                            <input type="text" name="project_name" class="form-control" style="margin-top: 15px;"/>
+                        </div>
+
+                        <div class="form-group">
+                            <label>Database name</label>
+                            <input type="text" name="project_name" class="form-control" style="margin-top: 15px;"/>
                         </div>
                     </form>
                 </div>
 
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary" onclick="savePostgresConfiguration()">
+                    <button type="button" class="btn btn-primary" onclick="createWebsite()">
                         Save changes
                     </button>
                 </div>
