--- a/views/layout.html
+++ b/views/layout.html
@@ -32,8 +32,8 @@
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav">
                         <li class="active"><a href="/">Manage Packages</a></li>
-                        <li><a href="/websites">Manage Websites</a></li>
                         <li><a href="/services">Manage Services</a></li>
+                        <li><a href="/websites">Manage Websites</a></li>
                     </ul>
                 </div>
             </div>
@@ -53,6 +53,7 @@
 
 <script type="text/javascript" src="/javascripts/jquery.min.js"></script>
 <script type="text/javascript" src="/javascripts/bootstrap.min.js"></script>
+<script type="text/javascript" src="/javascripts/main.js"></script>
 
 {% block scripts %}
 
