--- a/views/layout.html
+++ b/views/layout.html
@@ -16,7 +16,29 @@
 <body>
 
 <header class="header">
-    LOGO
+    <div class="container">
+        <nav class="navbar navbar-default">
+            <div class="container-fluid">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+                            data-target="#bs-example-navbar-collapse-1">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                </div>
+
+                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                    <ul class="nav navbar-nav">
+                        <li class="active"><a href="/">Manage Packages</a></li>
+                        <li><a href="/services">Manage Services</a></li>
+                        <li><a href="/websites">Manage Websites</a></li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </div>
 </header>
 
 <div class="container">
@@ -31,6 +53,7 @@
 
 <script type="text/javascript" src="/javascripts/jquery.min.js"></script>
 <script type="text/javascript" src="/javascripts/bootstrap.min.js"></script>
+<script type="text/javascript" src="/javascripts/main.js"></script>
 
 {% block scripts %}
 
